--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,12 +9,12 @@
     },
     {
       "src": "logo.jpeg",
-      "type": "image/png",
+      "type": "image/jpeg",
       "sizes": "192x192"
     },
     {
       "src": "logo.jpeg",
-      "type": "image/png",
+      "type": "image/jpeg",
       "sizes": "512x512"
     }
   ],
